k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-api-node
  template:
    metadata:
      labels:
        app: simple-api-node
    spec:
      containers:
      - name: simple-api-node
        image: bchan0001/simple-api-node:3.0.0
        resources:
          limits:
            cpu: "0.5"
            memory: "64Mi"
          requests:
            cpu: "0.25"
            memory: "32Mi"
        imagePullPolicy: Always         
        ports:
          - containerPort: 8080
